<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_DeviceInfo" Id="{42cacf68-16e4-42fd-a8f4-25a787700b85}">
    <Declaration><![CDATA[TYPE ST_DeviceInfo :
STRUCT
	sDeviceName		: STRING(19);		(* ADS state *)
	nVersion		: SINT;				(* Device state *)
	nRevision		: SINT;
	nBuild			: INT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>